Finished adding copy

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -5,14 +5,10 @@
   }
 }
   
-  // Medium / Tablet Screens ------>
+  // Medium / Tablet Screens ------------>
   @media (max-width: 995px) {
     // About me -->
-  
-    .about p {
-      padding-bottom: 50px;
-    }
-    
+      
     .projectContainer {
       max-width: 500px;
       padding: 40px 20px;
@@ -50,7 +46,7 @@
   }
 }
 
-// Smaller Screens / Tablets ------>
+// Smaller Screens / Tablets ------------>
 @media (max-width: 850px) {
   // About Me -->
   
@@ -106,10 +102,10 @@
     max-width: 500px;
   }
 }
-// Small Screens ------>
+// Small Screens ------------>
 @media (max-width: 715px) {
   // Global -->
-  // Section Titles
+
   .sectionTitle {
     padding: 10px 0;
   }
@@ -164,7 +160,7 @@
 
   .about {
     h3 {
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
 
     p {
@@ -209,6 +205,11 @@
       height: 125px;
     }
 
+    li:last-child {
+      padding: 10px 5px;
+    }
+
+
     i {
       font-size: 5rem;
     }
@@ -225,10 +226,20 @@
   .toolkit ul p {
     font-size: 1.6rem;
   }
+
+  // Contact -->
+  .socials a {
+    font-size: 3rem;
+    padding: 10px 15px;
+  }
+
+  .socials li:last-child a {
+    margin: 0;
+  }
 }
 
-// Mobile / Small Tablets ------>
-@media (max-width: 515px) {
+// Mobile / Small Tablets ------------>
+@media (max-width: 526px) {
   // Global -->
 
   .sectionTitle {
@@ -266,7 +277,7 @@
     padding-bottom: 50px;
 
     h3 {
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
 
     p {
@@ -276,6 +287,11 @@
     a {
       width: 226px;
     }
+
+    p:nth-of-type(3) {
+      padding-bottom: 50px;
+    }
+
   }
 
   .profilePic {
@@ -316,8 +332,8 @@
   // Toolkit -->
 
   .toolkitContainer {
-    grid-template-columns: auto;
-    gap: 10px 0;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px 10px;
     padding-bottom: 50px;
 
     img {
@@ -344,8 +360,17 @@
     }
 
     p {
-      padding-left: 10px;
+      padding: 0 0 0 10px;
     }
+  }
+
+  // Mobile list edit
+  .desktopToolkit {
+    display: none;
+  }
+
+  .mobileToolkit {
+    display: block;
   }
 
   // Contact -->
@@ -367,8 +392,6 @@
 
   .socials a {
     display: block;
-    // padding: 10px 15px;
-    // font-size: 3rem;
   }
 
   .contactContainer {
