--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -51,13 +51,14 @@ h2 {
 
 // About Me Header
 h3 {
-  font-size: 3.5rem;
+  font-size: 2.5rem;
+  font-weight: 500;
 }
 
 // About Me Body
 p {
   font-size: 2.25rem;
-  line-height: 1.2;
+  line-height: 1.4;
 }
 
 // Projects -->
