--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -4,6 +4,10 @@
   background: linear-gradient(to bottom, #779a7128), url(../assets/handmadepaper.png) repeat;
 
   p {
+    padding-bottom:20px;
+  }
+
+  p:nth-of-type(3) {
     padding-bottom: 100px;
   }
 
