--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -147,12 +147,12 @@
     height: auto;
 
     h1 {
-      padding-top: 50px;
+      padding-top: 70px;
     }
     
     p {
       font-size: 2.5rem;
-      padding-bottom: 150px;
+      padding-bottom: 170px;
     }
   }
 
@@ -248,11 +248,33 @@
 
   // Header -->
 
-  // Temp ----------------------------------------------->>>
-  nav {
-    display: none;
+  // Mobile Nav -->
+  .mobileNav {
+    display: block;
+    font-size: 2.5rem;
   }
 
+  nav {
+    a:not(.mobileNav) {
+      padding: 5px 10px;
+    }
+
+    ul {
+      flex-direction: column;
+      align-items: flex-end;
+      padding: 0;
+    }
+  }
+
+  nav ul li:last-child {
+    margin-bottom: -130px;
+  }
+  
+  .toggleDropDown {
+    visibility: hidden;
+  }
+  
+  // Hero Statement
   h1 {
     span:nth-of-type(1) {
       font-size: 1.8rem;
@@ -301,7 +323,7 @@
   // Projects -->
 
   .projects {
-    background: lighten($button, 40%);
+    background: lighten($button, 30%);
 
     // Project Buttons
     a:first-of-type {
