--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -2,13 +2,16 @@
 $baseFont: 'Montserrat', sans-serif;
 $heroFont: 'Playfair Display', serif;
 $titleFont: 'Playfair Display', serif;
+$newFont: 'Oswald', sans-serif;
+$anotherNewFont: 'Poppins', sans-serif;
+$testFont: 'Monda', sans-serif;
 
 // Colours
 $black: #000;
 $white: #FFF;
 
 // Button Colour
-$button: #779a71;
+$button: #6fae64;
 
 // Background Colour
 $background: #dde4dd;
