--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -1,25 +1,16 @@
 // About Me Section 
 .about {
-  padding-bottom: 100px;
-  background: linear-gradient(to bottom, #779a7128), url(../assets/handmadepaper.png) repeat;
-
-  p {
-    padding-bottom:20px;
-  }
-
   p:nth-of-type(3) {
     padding-bottom: 100px;
   }
 
-  a {
-    width: 310px;
-    height: 50px;
-    align-self: flex-end;
-  }
-
-  h3 {
+  h3, p {
     padding-bottom: 20px;
   }
+
+  // p {
+  //   max-width: 550px;
+  // }
 }
 
 .aboutContainer {
@@ -28,7 +19,7 @@
 }
 
 .bioContainer {
-  max-width: 550px;
+  max-width: 750px;
 }
 
 .bioContainer,
