--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -1,36 +1,38 @@
 .contact {
   padding-bottom: 100px;
-  background: linear-gradient(to bottom, #e9ede8ac), url(../assets/eucalyptusContact.jpeg) no-repeat bottom left / 130%;
 }
 
 .contactContainer {
+  padding: 50px 50px;
+
   background: #ffffffd2;
   border-radius: 5px;
-  padding: 50px 50px;
+
   @include flex (row, center, center);
 }
+
+// Social / Contact container
 
 .connections {
   align-self: flex-start;
   margin: 57px 100px 0 0;
-  @include flex (column, 0, 0);
 }
 
+.connections,
 .connectionsContainer {
-  // text-align: center;
   @include flex (column, 0, 0);
 }
 
 // Email and Calendly Links
+
 .contactBox {
   margin: 0 auto 20px auto;
   display: inline-block;
   
   a {
     @include flex (row, 0, 0);
-    border: 2px solid $black;
-    border-radius: 5px;
     padding: 15px 20px;
+    border: 2px solid $black;
     
     p {
       padding-right: 10px;
@@ -43,12 +45,12 @@
 
     // Hover effects
     transition-property: background, color, border;
-    transition-duration: 0.3s;
 
     &:hover,
     &:focus {
       background: $button;
       color: $white;
+      
       border: 2px solid $button;
     }
   }
@@ -57,6 +59,13 @@
 .contactBox:nth-of-type(2) {
   margin-bottom: 50px;
 }
+
+// Email / Social links transition duration
+.contactBox a,
+.socials a {
+  transition-duration: 0.3s;
+}
+
 
 // Social Links
 
@@ -69,18 +78,12 @@
 
 .socials {
   @include flex (row, 0, 0);
-  
-  li {
-    text-align: center;
-  }
-  
+    
   // Socials hover effects
   a {
     padding: 5px 10px;
     border: 2px solid $black;
-    border-radius: 5px;
     transition-property: color, background, border;
-    transition-duration: 0.3s;
 
     &:hover,
     &:focus {
@@ -114,7 +117,12 @@
       border: 2px solid #1DA1F2;
     }
   }
+}
 
+// Social and Form centering
+form legend,
+.socials li {
+  text-align: center;
 }
 
 
@@ -144,7 +152,6 @@ form {
 
   legend {
     max-width: 500px;
-    text-align: center;
   }
 
   button {
