--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -5,6 +5,9 @@ $titleFont: 'Playfair Display', serif;
 $newFont: 'Oswald', sans-serif;
 $anotherNewFont: 'Poppins', sans-serif;
 $testFont: 'Monda', sans-serif;
+$lato: 'Lato', sans-serif; 
+$roboto: 'Roboto Slab', sans-serif;
+
 
 // Colours
 $black: #000;
@@ -14,4 +17,7 @@ $white: #FFF;
 $button: #6fae64;
 
 // Background Colour
-$background: #dde4dd;
+$background: #d2e2e8;
+
+// Section Title Font Colour
+$titleColour: #3f3f3f;
